# Trading-using-AI-Personas

./: README.md
src/: .env.example  accounts.db  pyproject.toml
