[project]
name = "trader-mcp"
version = "0.1.0"
description = "AI trading agents using OpenAI Agents SDK with MCP servers"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.19",
    "openai>=1.87.0",
    "mcp>=1.9.4",
    "gradio>=5.0.0",
    "pandas>=2.0.0",
    "plotly>=6.0.0",
    "polygon-api-client>=1.14.0",
    "python-dotenv>=1.0.0",
    "requests>=2.0.0",
    "pydantic>=2.10.0",
]
